Hides the em dash in the mobile view

--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -76,6 +76,9 @@
         h1.backdrop {
 		line-height: 168px;
         }
+	span.hide {
+		display: none;
+	}
 }
 
 /* Mobile Landscape Size to Tablet Portrait (devices and browsers) */
