Corrects a typo in the GitHub social profile

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -6,7 +6,7 @@
   {% endif %}
 
   {% if site.style.social.github %}
-  <a title="{{ site.style.social.github }} on Github" href="https://github.com/{{ site.style.social.github }}">
+  <a title="{{ site.style.social.github }} on GitHub" href="https://github.com/{{ site.style.social.github }}">
     <i class="fa fa-github-square"></i>
   </a>
   {% endif %}
