--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -103,6 +103,12 @@ h1.backdrop.offering {
   padding-right: 30px;
 }
 
+h1.backdrop.workshops {
+  background-image: url(/assets/workshops/backdrop.jpg);
+  text-align: right;
+  padding-right: 10px;
+}
+
 h1.backdrop.bestof {
   background-image: url(/assets/bestof/backdrop.jpg);
   margin-bottom: 5%;
