--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -8,7 +8,7 @@
   <a href="/speaking">Speaker</a> and technical trainer.<br/>
   <a href="https://www.pluralsight.com/authors/enrico-campidoglio">Pluralsight</a> author.<br/>
   <a href="https://github.com/AutoFixture">AutoFixture</a> core member.<br/>
-  <a href="http://megakemp.com/2014/05/09/a-gentle-introduction-to-mechanical-keyboards">Mechanical keyboards</a> fanatic.
+  <a href="/2014/05/09/a-gentle-introduction-to-mechanical-keyboards">Keyboard</a> connoisseur.<br/>
   </p>
   <hr/>
   <div>
