--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,6 +9,7 @@
   <a href="https://www.pluralsight.com/authors/enrico-campidoglio">Pluralsight</a> author.<br/>
   <a href="https://github.com/AutoFixture">AutoFixture</a> core member.<br/>
   <a href="/2014/05/09/a-gentle-introduction-to-mechanical-keyboards">Keyboard</a> connoisseur.<br/>
+  <a href="/git">Git</a> enthusiast.
   </p>
   <hr/>
   <div>
