Reduces the font size and spacing in the top bar on mobile

--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -44,6 +44,10 @@
 	nav { position: relative; }
 	nav ul,
 	#logo { text-align: left; }
+        #topbar ul li {
+		margin-left: 15px;
+		font-size: 93%;
+	}
 	.sidebar {
 		display: none;
 	}
