Updates the Disqus client script

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,7 +55,6 @@
     </div>
   </div>
 
-  {% include comments.html %}
-
+  <script id="dsq-count-scr" src="//megakemp.disqus.com/count.js" async></script>
 </body>
 </html>
