--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -1,12 +1,15 @@
-<script type="text/javascript">
-  var disqus_shortname = 'megakemp';
-  var disqus_url = '{{ site.url }}{{ page.url | replace:'index.html','' }}';
+<div id="disqus_thread"></div>
+<script>
+var disqus_config = function () {
+    this.page.url = '{{ site.url }}{{ page.url | replace:'index.html','' }}';
+    this.page.identifier = '{{ page.url | replace:'index.html','' }}';
+};
 
-  (function () {
-    var s = document.createElement('script');
-    s.async = true;
-    s.type = 'text/javascript';
-    s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
-    (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-  }());
+(function() {
+    var d = document, s = d.createElement('script');
+    s.src = 'https://megakemp.disqus.com/embed.js';
+    s.setAttribute('data-timestamp', +new Date());
+    (d.head || d.body).appendChild(s);
+})();
 </script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
