--- a/_includes/license.html
+++ b/_includes/license.html
@@ -1,17 +1,17 @@
-<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+<a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
   <img alt="Creative Commons License"
        style="border-width:0; display:block; margin:0 auto;"
-       src="http://i.creativecommons.org/l/by/4.0/80x15.png" />
+       src="https://i.creativecommons.org/l/by/4.0/80x15.png" />
 </a>
-<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">
+<span xmlns:dct="https://purl.org/dc/terms/" property="dct:title">
   The material published on this blog
 </span>
 by
-<a xmlns:cc="http://creativecommons.org/ns#" href="http://megakemp.com" property="cc:attributionName" rel="cc:attributionURL">
+<a xmlns:cc="https://creativecommons.org/ns#" href="https://megakemp.com" property="cc:attributionName" rel="cc:attributionURL">
   Enrico Campidoglio
 </a>
 <br />
 is licensed under a
-<a rel="license" href="http://creativecommons.org/licenses/by/4.0/">
+<a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
   Creative Commons Attribution 4.0 International License
 </a>.
