--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,8 @@ layout: default
 
 <div class="comments">
   <i class="fa fa-comment"></i>
-  <a href="{{ site.url }}{{ page.url }}#disqus_thread"></a>
+  <a href="{{ site.url }}{{ page.url }}#disqus_thread"
+     data-disqus-identifier="{{ page.url }}"></a>
 </div>
 
 <div id="related">
