--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -10,31 +10,36 @@ html, body {
 body {
   font-size: 16px;
   background-color: white;
-  color: #222222;
   line-height: 24px;
   margin: 0;
-  border-top: 25px solid {{ site.style.base_color }};
-  box-shadow: inset 0 6px 5px -5px rgba(0,0,0,0.8);
 }
 
-#topbar {
-  margin-top: -63px;
-  margin-bottom: 63px;
+.topbar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  right: 0;
+  text-align: center;
+  padding-left: 29%;
+  padding-right: 20%;
   font-weight: 600;
+  background-color: rgba(0,0,0,0.67);
+  box-shadow: 0 1px 5px 0px rgba(0,0,0,0.67);
+  z-index: 99;
 }
 
-#topbar ul li {
-  float: right;
+.topbar ul li {
+  display: inline;
   list-style: none;
-  text-align: right;
-  margin-left: 20px;
-  font-size: 94%;
+  margin-left: 30px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 110%;
   letter-spacing: 0.7px;
   color: #fff;
   text-shadow: 0 -1px 0 rgba(0,0,0,0.4);
 }
 
-#topbar a {
+.topbar a, .topbar a:visited {
   color: #fff;
   transition: all 0.2s ease-in;
   -webkit-transition: all 0.2s ease-in;
@@ -42,7 +47,7 @@ body {
   -o-transition: all 0.2s ease-in;
 }
 
-#topbar a:hover {
+.topbar a:hover {
   text-decoration: none;
   color: {{ site.style.highlight_color }};
 }
