Merges jQuery and bigfoot into a single file

--- a/_includes/footnotes.html
+++ b/_includes/footnotes.html
@@ -1,9 +1,3 @@
 {% if page.layout == 'post' or page.url == '/' %}
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-<script src="/js/bigfoot.min.js"></script>
-<script type="text/javascript">
-  $.bigfoot({
-    actionOriginalFN: "ignore"
-  });
-</script>
+<script src="/js/jquery-and-bigfoot.min.js" async></script>
 {% endif %}
