--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
   <link rel="alternate" type="application/rss+xml" title="megakemp.com" href="http://feeds.feedburner.com/thoughtology?format=xml" />
   <link rel="stylesheet" href="/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,600|Open+Sans:700|Roboto:300|Inconsolata" rel="stylesheet">
-  <script src="https://use.fontawesome.com/44db616403.js"></script>
+  <script src="https://use.fontawesome.com/44db616403.js" async></script>
   {% include analytics.html %}
 
   {% include footnotes.html %}
