Applies the style for inline code on the home pages

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -471,8 +471,7 @@ p.thumbnail-caption {
   margin-left: 1.35em;
 }
 
-.thumbnail-description code,
-#post code {
+.thumbnail-description code, #home code, #post code {
   border: 1px solid #ddd;
   background-color: #f8f8f8;
   padding: .2em;
