--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,6 +15,7 @@
   <meta property="og:title" content="{{ page.title }}" />
   <meta property="og:url" content="{{ site.url }}{{ page.url | replace:'index.html','' }}" />
   <meta property="og:type" content="article" />
+  <meta property="fb:app_id" content="1388849251225777" />
   {% if page.excerpt %}
   <meta property="og:description" content="{{ page.excerpt | strip_html | strip_newlines }}" />
   <meta name="twitter:description" content="{{ page.excerpt | strip_html | strip_newlines }}" />
