--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,9 +38,9 @@
   <nav class="topbar" role="navigation">
     <ul>
       <li role="presentation"><a href="/about">about</a></li>
-      <span class="hide"><li role="presentation"><a href="/git">git</a></li></span>
+      <li role="presentation"><a href="/offering">offering</a></li>
+      <li role="presentation" class="hide"><a href="/workshops">workshops</a></li>
       <li role="presentation"><a href="/">blog</a></li>
-      <li role="presentation"><a href="/bestof">best of</a></li>
       <li role="presentation"><a href="/speaking">speaking</a></li>
     </ul>
   </nav>
