--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
   <hr/>
   <ul>
   <p>Italian programmer in Sweden.<br/>
-  <a href="/speaking">Speaker</a> and technical trainer.<br/>
+  <a href="/speaking">Speaker</a> and <a href="/offering">trainer</a>.<br/>
   <a href="https://www.pluralsight.com/authors/enrico-campidoglio">Pluralsight</a> author.<br/>
   <a href="https://github.com/AutoFixture">AutoFixture</a> core member.<br/>
   <a href="/2014/05/09/a-gentle-introduction-to-mechanical-keyboards">Keyboard</a> connoisseur.<br/>
