--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -60,6 +60,7 @@ h1, h2, h3, h4, h5, h6 {
 
 h1.title {
   font-family: "Open Sans", sans-serif;
+  color: {{ site.style.highlight_color }};
   font-weight: 700;
   font-size: 39px;
   line-height: 49px;
