--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,6 @@
   </p>
 
   <p>
-    © {{ site.style.name }}, 2017 &mdash; built with Vim and Jekyll using the Lagom theme
+  © {{ site.style.name }}, 2017 &mdash; built with <img src="/assets/footer/orange-heart.png" alt="love" /> Vim and Jekyll.
   </p>
 </div>
