--- a/_includes/license.html
+++ b/_includes/license.html
@@ -1,6 +1,6 @@
 <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
   <img alt="Creative Commons License"
-       style="border-width:0; display:block; margin:0 auto;"
+       style="border-width:0; display:block; margin:0 auto 7px;"
        src="https://i.creativecommons.org/l/by/4.0/80x15.png" />
 </a>
 <span xmlns:dct="https://purl.org/dc/terms/" property="dct:title">
