--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -495,6 +495,16 @@ p.thumbnail-caption {
   border: none;
 }
 
+#about {
+  margin: 2.2em auto 1.6em;
+  border-top: 4px solid #aaa;
+  padding-top: 0.9em;
+}
+
+#about p {
+  font-size: 90%;
+}
+
 div.pagination {
   padding-top: 10px;
   padding-bottom: 30px;
