--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,6 @@
   </p>
 
   <p>
-  © {{ site.style.name }}, 2017 &mdash; built with <img src="/assets/footer/orange-heart.png" alt="love" /> Vim and Jekyll.
+  © {{ site.style.name }}, 2017 &mdash; built with <i class="fa fa-heart" aria-hidden="true"></i> <span class="nowrap">Vim and Jekyll</span>.
   </p>
 </div>
