Corrects the wrapping in the license

--- a/_includes/license.html
+++ b/_includes/license.html
@@ -8,7 +8,7 @@
 </span>
 by
 <a xmlns:cc="https://creativecommons.org/ns#" href="https://megakemp.com" property="cc:attributionName" rel="cc:attributionURL">
-  Enrico Campidoglio
+  <span class="nowrap">Enrico Campidoglio</span>
 </a>
 <br />
 is licensed under a
