Styles the bullet only for unordered lists

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -233,7 +233,7 @@ ul.posts p {
   margin-left: 20px;
 }
 
-#home li::before {
+#home ul li::before {
   content: '\25CF';
   color: {{ site.style.highlight_color }};
   display: inline-block;
