--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -228,12 +228,16 @@ ul.posts p {
   margin-left:115px;
 }
 
-#home ul {
+#home ul, #post ul {
   list-style-type: none;
   margin-left: 20px;
 }
 
-#home ul li::before {
+#post ol {
+  margin-left: 1.35em;
+}
+
+#home ul li::before, #post ul li::before {
   content: '\25CF';
   color: {{ site.style.highlight_color }};
   display: inline-block;
@@ -486,11 +490,6 @@ p.thumbnail-caption {
   background-color: #f8f8f8;
   padding: .3em;
   margin-bottom: 20px !important;
-}
-
-#post ul,
-#post ol {
-  margin-left: 1.35em;
 }
 
 .thumbnail-description code, #home code, #post code {
