Slightly increases the line height of unordered list items

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -245,8 +245,8 @@ ul.posts p {
   margin-left: -1em;
 }
 
-#home li {
-  line-height: 23px;
+#home ul li, #post ul li {
+  line-height: 24px;
 }
 
 .meta {
