--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -611,8 +611,7 @@ div.comments i {
   box-shadow: 0 0 8px rgba(0, 0, 0, .8);
   -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
   -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-  margin-left: 56px;
-  margin-bottom: 25px;
+  margin: 0 auto 25px;
 }
 
 #stalker {
