Corrects the text in the sidebar

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,10 +3,10 @@
   <div id="logo"></div>
   <h2>I'm <a href="/about">Enrico</a>.</h2>
   <hr/>
-  <p>Italian programmer in Sweden.<br/>
-  <a href="/speaking">Speaker</a> and <a href="/offering">trainer</a>.<br/>
+  <p>
+  <a href="/offering">Freelance</a> programmer.<br/>
+  <a href="/speaking">Speaker</a> and <a href="/workshops">trainer</a>.<br/>
   <a href="https://www.pluralsight.com/authors/enrico-campidoglio">Pluralsight</a> author.<br/>
-  <a href="https://github.com/AutoFixture">AutoFixture</a> core member.<br/>
   <a href="/2014/05/09/a-gentle-introduction-to-mechanical-keyboards">Keyboard</a> connoisseur.<br/>
   <a href="/git">Git</a> enthusiast.
   </p>
