--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -307,8 +307,8 @@ nav hr {
 
 .screenshot-caption {
   position: relative;
-  margin: 30px auto auto auto;
-  max-width: 90%;
+  margin: 50px auto auto auto;
+  max-width: 95%;
   box-shadow: 0 0 20px 0 rgba(0,0,0,0.8);
 }
 
@@ -331,8 +331,8 @@ nav hr {
 
 .screenshot-noshadow-caption {
   position: relative;
-  margin: 30px auto auto auto;
-  max-width: 95%;
+  margin: 50px auto auto auto;
+  max-width: 100%;
 }
 
 .thumbnail-video {
@@ -680,9 +680,8 @@ i.fa-hn {
 
 .caption {
   display: block;
-  margin: 0 auto;
+  margin: 15px auto 35px;
   text-align: center;
   font-size: smaller;
-  padding-top: 15px;
-  padding-bottom: 10px
+  font-style: italic;
 }
