Changes a few words in the about text

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,7 +38,7 @@ layout: default
 
 <div id="about">
   <h4>Enrico Campidoglio</h4>
-  <p>Hi, I'm Enrico Campidoglio. I'm a freelance programmer, teacher and mentor focusing on helping teams develop software better. I write this blog because I love telling stories about the things I know. You can read more about me <a href="{{ site.url }}/about">here</a>, if you like.</p>
+  <p>Hi, I'm Enrico Campidoglio. I'm a freelance programmer, trainer and mentor focusing on helping teams develop software better. I write this blog because I love sharing stories about the things I know. You can read more about me <a href="{{ site.url }}/about">here</a>, if you like.</p>
 </div>
 
 {% include comments.html %}
