Links to the correct RSS feed

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
   {% endif %}
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}" />
   <link rel="shortcut icon" href="/favicon.ico">
-  <link rel="alternate" type="application/rss+xml" title="megakemp.com" href="http://feeds.feedburner.com/thoughtology?format=xml" />
+  <link rel="alternate" type="application/rss+xml" title="Enrico Campidoglio" href="http://feeds.feedburner.com/megakemp" />
   <link rel="stylesheet" href="/css/main.css">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,600|Open+Sans:700|Roboto:300|Inconsolata" rel="stylesheet">
   <script src="https://use.fontawesome.com/44db616403.js" async></script>
