Appends a '/' to all navigation URLs to avoid redirects

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,11 +37,11 @@
 <body>
   <nav class="topbar" role="navigation">
     <ul>
-      <li role="presentation"><a href="/about">about</a></li>
-      <li role="presentation"><a href="/offering">offering</a></li>
-      <li role="presentation" class="hide"><a href="/workshops">workshops</a></li>
+      <li role="presentation"><a href="/about/">about</a></li>
+      <li role="presentation"><a href="/offering/">offering</a></li>
+      <li role="presentation" class="hide"><a href="/workshops/">workshops</a></li>
       <li role="presentation"><a href="/">blog</a></li>
-      <li role="presentation"><a href="/speaking">speaking</a></li>
+      <li role="presentation"><a href="/speaking/">speaking</a></li>
     </ul>
   </nav>
 
