--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,11 +4,11 @@
   <h2>I'm <a href="/about">Enrico</a>.</h2>
   <hr/>
   <p>
-  <a href="/offering">Freelance</a> programmer.<br/>
-  <a href="/speaking">Speaker</a> and <a href="/workshops">trainer</a>.<br/>
+  <a href="/offering/">Freelance</a> programmer.<br/>
+  <a href="/speaking/">Speaker</a> and <a href="/workshops">trainer</a>.<br/>
   <a href="https://www.pluralsight.com/authors/enrico-campidoglio">Pluralsight</a> author.<br/>
-  <a href="/2014/05/09/a-gentle-introduction-to-mechanical-keyboards">Keyboard</a> connoisseur.<br/>
-  <a href="/git">Git</a> enthusiast.
+  <a href="/2014/05/09/a-gentle-introduction-to-mechanical-keyboards/">Keyboard</a> connoisseur.<br/>
+  <a href="/git/">Git</a> enthusiast.
   </p>
   <hr/>
   <div id="social">
