Updates the URL to the Creative Commons license image

--- a/_includes/license.html
+++ b/_includes/license.html
@@ -1,7 +1,7 @@
 <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">
   <img alt="Creative Commons License"
        style="border-width:0; display:block; margin:0 auto 7px;"
-       src="https://i.creativecommons.org/l/by/4.0/80x15.png" />
+       src="https://licensebuttons.net/l/by/4.0/80x15.png" />
 </a>
 <span xmlns:dct="https://purl.org/dc/terms/" property="dct:title">
   The material published on this blog
