--- a/_includes/analytics.html
+++ b/_includes/analytics.html
@@ -1,11 +1,8 @@
 {% if site.style.google_analytics_tracking_id %}
 <script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', '{{ site.style.google_analytics_tracking_id }}', '{{ site.style.google_analytics_property_name }}');
+window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+ga('create', '{{ site.style.google_analytics_tracking_id }}', 'auto');
 ga('send', 'pageview');
 </script>
+<script src="https://www.google-analytics.com/analytics.js" async></script>
 {% endif %}
