Adds a link to the contact page in the navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,7 @@
       <li role="presentation" class="hide"><a href="/workshops/">workshops</a></li>
       <li role="presentation"><a href="/">blog</a></li>
       <li role="presentation"><a href="/speaking/">speaking</a></li>
+      <li role="presentation"><a href="/offering/#contact">contact</a></li>
     </ul>
   </nav>
 
