--- a/_includes/css/layout.css
+++ b/_includes/css/layout.css
@@ -37,23 +37,17 @@
 		margin-left: 25px;
 	}
 	.sidebar {
-		width: 160px;
+		display: none;
 	}
-	.sidebar h2 {
-		font-size: 18px;
-	}
-	.sidebar ul {
-		font-size: 14px;
-	}
+
         h1.backdrop {
 		line-height: 285px;
         }
-        #stalker i {
-		font-size: 30px;
-        }
-        #stalker a {
-		width: 36px;
-        }
+
+	.content {
+		border: 0px;
+		padding-left: 0px;
+	}
 }
 
 /* All Mobile Sizes (devices and browser) */
