Includes the flags CSS in the default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="alternate" type="application/rss+xml" title="Enrico Campidoglio" href="http://feeds.feedburner.com/megakemp" />
   <link rel="stylesheet" href="{{ site.url }}/css/main.css">
+  {% include flags.html %}
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,600|Open+Sans:700|Roboto:300|Inconsolata" rel="stylesheet">
   <script src="https://use.fontawesome.com/44db616403.js" async></script>
   {% include footnotes.html %}
