Only includes the flag icons in the speaking page

--- a/_includes/flags.html
+++ b/_includes/flags.html
@@ -1,1 +1,3 @@
+{% if page.url contains 'speaking' %}
 <link rel="stylesheet" href="{{ site.url }}/css/flag-icon-css/css/flag-icon.min.css">
+{% endif %}
