Includes jQuery, header and bigfoot in all pages
Since the script to auto-hide the navigation bar depends on jQuery
and needs to be present in all pages, we bundle it together with
bigfoot (which also depends on jQuery) in a single minified file
and link it in all pages.

This has the nice side-effect of making footnotes available in all
pages, which is something I've been wanting to do for a while.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,8 +30,8 @@
   <link rel="stylesheet" href="{{ site.url }}/css/main.css">
   {% include flags.html %}
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,600|Open+Sans:700|Roboto:300|Inconsolata" rel="stylesheet">
+  <script src="{{ site.url }}/js/jquery-header-bigfoot.min.js"></script>
   <script src="https://use.fontawesome.com/44db616403.js" async></script>
-  {% include footnotes.html %}
 </head>
 <body>
   <nav class="topbar" role="navigation">
