Auto-hides the navigation bar when scrolling a page
Scrolling down hides the navigation bar to give more room
to the content. Scrolling up is interpreted as the user
wanting to go back to the top of the page, so the navigation
bar is shown again.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
   <script src="https://use.fontawesome.com/44db616403.js" async></script>
 </head>
 <body>
-  <nav class="topbar" role="navigation">
+  <nav class="topbar header" role="navigation">
     <ul>
       <li role="presentation"><a href="/about/">about</a></li>
       <li role="presentation" class="hide"><a href="/offering/">offering</a></li>
