--- a/_includes/flags.html
+++ b/_includes/flags.html
@@ -1,3 +1,3 @@
-{% if page.url contains 'speaking' %}
+{% if page.url contains 'speaking' or page.url contains 'workshops' %}
 <link rel="stylesheet" href="{{ site.url }}/css/flag-icon-css/css/flag-icon.min.css">
 {% endif %}
