--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
   <h2>I'm <a href="/about">Enrico</a>.</h2>
   <hr/>
   <p>
-  <a href="/offering/">Freelance</a> programmer.<br/>
+  <a href="/services/">Freelance</a> programmer.<br/>
   <a href="/speaking/">Speaker</a> and <a href="/workshops">trainer</a>.<br/>
   <a href="http://bit.ly/ps-ecampidoglio">Pluralsight</a> author.<br/>
   <a href="/2014/05/09/a-gentle-introduction-to-mechanical-keyboards/">Keyboard</a> connoisseur.<br/>
