--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,11 +37,11 @@
   <nav class="topbar header" role="navigation">
     <ul>
       <li role="presentation"><a href="/about/">about</a></li>
-      <li role="presentation" class="hide"><a href="/offering/">offering</a></li>
+      <li role="presentation" class="hide"><a href="/services/">services</a></li>
       <li role="presentation" class="hide"><a href="/workshops/">training</a></li>
       <li role="presentation"><a href="/speaking/">speaking</a></li>
       <li role="presentation"><a href="/">blog</a></li>
-      <li role="presentation"><a href="/offering/#contact">contact</a></li>
+      <li role="presentation"><a href="/services/#contact">contact</a></li>
     </ul>
   </nav>
 
