--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -649,7 +649,7 @@ div.comments i {
   border-radius: 150px;
   -webkit-border-radius: 150px;
   -moz-border-radius: 150px;
-  background: url(../../../logo.jpg) no-repeat;
+  background: url(/logo.jpg) no-repeat;
   box-shadow: 0 0 8px rgba(0, 0, 0, .8);
   -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
   -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
