Updates Fontawesome to the latest version

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
   {% include flags.html %}
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,600|Open+Sans:700|Roboto:300|Inconsolata" rel="stylesheet">
   <script src="{{ site.url }}/js/jquery-header-bigfoot.min.js"></script>
-  <script src="https://use.fontawesome.com/44db616403.js" async></script>
+  <script src="https://kit.fontawesome.com/e6cb40d97d.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <nav class="topbar header" role="navigation">
