Uses the original icons for the social media links

--- a/_includes/social.html
+++ b/_includes/social.html
@@ -1,13 +1,13 @@
 <div id="stalker">
   {% if site.style.social.twitter %}
   <a title="{{ site.style.social.twitter }} on Twitter" href="https://twitter.com/{{ site.style.social.twitter }}">
-    <i class="fa fa-twitter-square"></i>
+    <i class="fab fa-twitter"></i>
   </a>
   {% endif %}
 
   {% if site.style.social.github %}
   <a title="{{ site.style.social.github }} on GitHub" href="https://github.com/{{ site.style.social.github }}">
-    <i class="fa fa-github-square"></i>
+    <i class="fab fa-github"></i>
   </a>
   {% endif %}
 
@@ -34,7 +34,7 @@
 
   {% if site.style.social.stackoverflow %}
   <a title="{{ site.style.name }} on Stack Overflow" href="http://stackoverflow.com/users/{{site.style.social.stackoverflow }}">
-    <i class="fa fa-stack-overflow"></i>
+    <i class="fab fa-stack-overflow"></i>
   </a>
   {% endif %}
 
@@ -52,7 +52,7 @@
 
   {% if site.style.social.linkedin %}
   <a title="{{ site.style.name }} on LinkedIn" href="https://www.linkedin.com/in/{{ site.style.social.linkedin }}">
-    <i class="fa fa-linkedin-square"></i>
+    <i class="fab fa-linkedin-in"></i>
   </a>
   {% endif %}
 
