--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,6 +11,6 @@
   </p>
 
   <p>
-  © {{ site.style.name }}, 2021 &mdash; built with <i class="fa fa-heart" aria-hidden="true"></i> <span class="nowrap">Vim and Jekyll</span>.
+  © {{ site.style.name }}, 2008&ndash;{{ site.time | date: "%Y" }} &mdash; built with <i class="fa fa-heart" aria-hidden="true"></i> <span class="nowrap">Vim and Jekyll</span>.
   </p>
 </div>
