Redesigns the presentations section in the speaking page

--- a/_includes/css/screen.css
+++ b/_includes/css/screen.css
@@ -735,6 +735,10 @@ i.fa-hn {
   font-style: italic;
 }
 
+.video-thumbnail-caption {
+  margin: 10px auto 45px;
+}
+
 figure {
   margin: 15px auto;
   text-align: center;
