Updates to the latest FontAwesome

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,10 +28,10 @@
   <link rel="shortcut icon" href="/favicon.ico">
   <link rel="alternate" type="application/rss+xml" title="Enrico Campidoglio" href="http://feeds.feedburner.com/megakemp" />
   <link rel="stylesheet" href="{{ site.url }}/css/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
   {% include flags.html %}
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,600|Open+Sans:700|Roboto:300|Inconsolata" rel="stylesheet">
   <script src="{{ site.url }}/js/jquery-header-bigfoot.min.js"></script>
-  <script src="https://kit.fontawesome.com/e6cb40d97d.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <nav class="topbar header" role="navigation">
