Links directly to the Pluralsight author page in the sidebar and about page

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
   <p>
   <a href="/services/">Freelance</a> programmer.<br/>
   <a href="/speaking/">Speaker</a> and <a href="/workshops">trainer</a>.<br/>
-  <a href="http://bit.ly/ps-ecampidoglio">Pluralsight</a> author.<br/>
+  <a href="https://www.pluralsight.com/authors/enrico-campidoglio">Pluralsight</a> author.<br/>
   <a href="/2014/05/09/a-gentle-introduction-to-mechanical-keyboards/">Keyboard</a> connoisseur.<br/>
   <a href="/git/">Git</a> enthusiast.
   </p>
